tests/interpreter/errors/left_join_null_field.mochi
let customers = [
  { id: 1, name: "Alice" }
]
let orders = [
  { id: 101, customerId: 2 }
]
let result = from o in orders
             left join c in customers on o.customerId == c.id
             select c.name
